# diploma_work

./: CMakeLists.txt  README.md  euristic_solver.cpp  euristic_solver_task1.cpp  exact_solver.cpp  exact_solver_task1.cpp  exact_solver_task2.cpp  generate_tests.cpp  graphics.ipynb  helper.h  main.cpp  main1.cpp  solver_task2.cpp  solver_task3.cpp
new_tests_after_LPT/tests_n/jumps/: tests_inputs_n.txt  tests_outputs_task1_n.txt  tests_outputs_task2_n.txt
new_tests_after_LPT/tests_n/max/: tests_outputs_task1_n.txt
new_tests_after_LPT/tests_n/min/: tests_outputs_task1_n.txt  tests_outputs_task2_n.txt
new_tests_after_LPT/tests_n/random/: tests_inputs_n.txt  tests_outputs_task1_n.txt
new_tests_after_LPT/tests_n2/jumps/: tests_inputs_n2.txt  tests_outputs_task1_n2.txt  tests_outputs_task2_n2.txt
new_tests_after_LPT/tests_n2/max/: tests_outputs_task1_n2.txt
new_tests_after_LPT/tests_n2/min/: tests_inputs_n2.txt  tests_outputs_task1_n2.txt  tests_outputs_task2_n2.txt
new_tests_after_LPT/tests_n2/random/: tests_inputs_n2.txt  tests_outputs_task1_n2.txt  tests_outputs_task2_n2.txt
old_logs/: logs.txt  logs_greedy.txt
tests/tests_n/max/: tests_inputs_n.txt  tests_outputs_task2_n.txt
tests/tests_n/min/: tests_inputs_n.txt
tests/tests_n/random/: tests_outputs_task2_n.txt
tests/tests_n2/jumps/: tests_outputs_task1_n2.txt
tests/tests_n2/max/: tests_inputs_n2.txt  tests_outputs_task1_n2.txt  tests_outputs_task2_n2.txt
tests/tests_n2/min/: tests_outputs_task1_n2.txt
tests/tests_n2/random/: tests_outputs_task1_n2.txt
tests_saved/10/jumps/: output10.txt  (+7 more)
(+631 files in other folders)
